lib/ElfScript_v0dot51/console/torquescript/CMDgram.output
Nonterminals useless in grammar

    expr_list_decl


Terminals unused in grammar

    rwENDDEF
    rwGLOBAL
    rwNIL
    rwENDIF
    rwENDWHILE
    rwENDFOR
    ILLEGAL_TOKEN
    CHRCONST
    opCAT
    rwStruct


Rules useless in grammar

  186 expr_list_decl: ε
  187               | expr_list


State 252 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: decl_list

    2 decl_list: ε
    3          | decl_list decl

    4 decl: stmt
    5     | fn_decl_stmt
    6     | package_decl

    7 package_decl: rwPACKAGE IDENT '{' fn_decl_list '}' ';'

    8 fn_decl_list: fn_decl_stmt
    9             | fn_decl_list fn_decl_stmt

   10 statement_list: ε
   11               | statement_list stmt

   12 stmt: if_stmt
   13     | while_stmt
   14     | for_stmt
   15     | foreach_stmt
   16     | datablock_decl
   17     | switch_stmt
   18     | rwBREAK ';'
   19     | rwCONTINUE ';'
   20     | rwRETURN ';'
   21     | rwRETURN expr ';'
   22     | rwRETURN '{' expr_list '}' ';'
   23     | expression_stmt ';'
   24     | TTAG '=' expr ';'
   25     | TTAG '=' expr ',' expr ';'
   26     | DOCBLOCK

   27 fn_decl_stmt: rwDEFINE IDENT '(' var_list_decl ')' '{' statement_list '}'
   28             | rwDEFINE IDENT opCOLONCOLON IDENT '(' var_list_decl ')' '{' statement_list '}'

   29 var_list_decl: ε
   30              | var_list

   31 var_list: param
   32         | var_list ',' param

   33 param: VAR
   34      | VAR '?'
   35      | VAR '=' expr
   36      | VAR '?' '=' expr

   37 datablock_decl: rwDATABLOCK class_name_expr '(' expr parent_block ')' '{' slot_assign_list_opt '}' ';'

   38 object_decl: rwDECLARE class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   39            | rwDECLARE class_name_expr '(' object_name parent_block object_args ')'
   40            | rwDECLARE class_name_expr '(' '[' object_name ']' parent_block object_args ')' '{' object_declare_block '}'
   41            | rwDECLARE class_name_expr '(' '[' object_name ']' parent_block object_args ')'
   42            | rwDECLARESINGLETON class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   43            | rwDECLARESINGLETON class_name_expr '(' object_name parent_block object_args ')'

   44 parent_block: ε
   45             | ':' IDENT

   46 object_name: ε
   47            | expr

   48 object_args: ε
   49            | ',' expr_list

   50 object_declare_block: ε
   51                     | slot_assign_list
   52                     | object_decl_list
   53                     | slot_assign_list object_decl_list

   54 object_decl_list: object_decl ';'
   55                 | object_decl_list object_decl ';'

   56 stmt_block: '{' statement_list '}'
   57           | stmt

   58 switch_stmt: rwSWITCH '(' expr ')' '{' case_block '}'
   59            | rwSWITCHSTR '(' expr ')' '{' case_block '}'

   60 case_block: rwCASE case_expr ':' statement_list
   61           | rwCASE case_expr ':' statement_list rwDEFAULT ':' statement_list
   62           | rwCASE case_expr ':' statement_list case_block

   63 case_expr: expr
   64          | case_expr rwCASEOR expr

   65 if_stmt: rwIF '(' expr ')' stmt_block
   66        | rwIF '(' expr ')' stmt_block rwELSE stmt_block

   67 while_stmt: rwWHILE '(' expr ')' stmt_block
   68           | rwDO stmt_block rwWHILE '(' expr ')'

   69 for_stmt: rwFOR '(' expr ';' expr ';' expr ')' stmt_block
   70         | rwFOR '(' expr ';' expr ';' ')' stmt_block
   71         | rwFOR '(' expr ';' ';' expr ')' stmt_block
   72         | rwFOR '(' expr ';' ';' ')' stmt_block
   73         | rwFOR '(' ';' expr ';' expr ')' stmt_block
   74         | rwFOR '(' ';' expr ';' ')' stmt_block
   75         | rwFOR '(' ';' ';' expr ')' stmt_block
   76         | rwFOR '(' ';' ';' ')' stmt_block
   77         | rwFOR '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   78         | rwFOR '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   79         | rwFOR '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   80         | rwFOR '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   81         | rwFOR '(' VAR rwIN rwRANGE expr ')' stmt_block

   82 foreach_stmt: rwFOREACH '(' VAR rwIN expr ')' stmt_block
   83             | rwFOREACHSTR '(' VAR rwIN expr ')' stmt_block
   84             | rwFOREACH '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   85             | rwFOREACH '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   86             | rwFOREACH '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   87             | rwFOREACH '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   88             | rwFOREACH '(' VAR rwIN rwRANGE expr ')' stmt_block

   89 expression_stmt: stmt_expr

   90 expr: stmt_expr
   91     | '(' expr ')'
   92     | expr '^' expr
   93     | expr '%' expr
   94     | expr '&' expr
   95     | expr '|' expr
   96     | expr '+' expr
   97     | expr '-' expr
   98     | expr '*' expr
   99     | expr '/' expr
  100     | '-' expr
  101     | '*' expr
  102     | TTAG
  103     | expr '?' expr ':' expr
  104     | expr '<' expr
  105     | expr '>' expr
  106     | expr opGE expr
  107     | expr opLE expr
  108     | expr opEQ expr
  109     | expr opNE expr
  110     | expr opOR expr
  111     | expr opSHL expr
  112     | expr opSHR expr
  113     | expr opAND expr
  114     | expr opSTREQ expr
  115     | expr opSTRNE expr
  116     | expr '@' expr
  117     | '!' expr
  118     | '~' expr
  119     | TAGATOM
  120     | FLTCONST
  121     | INTCONST
  122     | rwBREAK
  123     | slot_acc
  124     | intslot_acc
  125     | IDENT
  126     | STRATOM
  127     | VAR
  128     | VAR '[' aidx_expr ']'

  129 slot_acc: expr '.' IDENT
  130         | expr '.' IDENT '[' aidx_expr ']'

  131 intslot_acc: expr opINTNAME class_name_expr
  132            | expr opINTNAMER class_name_expr

  133 class_name_expr: IDENT
  134                | '(' expr ')'

  135 assign_op_struct: opPLUSPLUS
  136                 | opMINUSMINUS
  137                 | opPLASN expr
  138                 | opMIASN expr
  139                 | opMLASN expr
  140                 | opDVASN expr
  141                 | opMODASN expr
  142                 | opANDASN expr
  143                 | opXORASN expr
  144                 | opORASN expr
  145                 | opSLASN expr
  146                 | opSRASN expr

  147 stmt_expr: funcall_expr
  148          | assert_expr
  149          | object_decl
  150          | VAR '=' expr
  151          | VAR '=' '{' expr_list '}'
  152          | VAR '[' aidx_expr ']' '=' expr
  153          | VAR '[' aidx_expr ']' '=' '{' expr_list '}'
  154          | VAR assign_op_struct
  155          | VAR '[' aidx_expr ']' assign_op_struct
  156          | slot_acc assign_op_struct
  157          | slot_acc '=' expr
  158          | slot_acc '=' '{' expr_list '}'

  159 funcall_expr: IDENT '(' func_arg_list_decl ')'
  160             | IDENT opCOLONCOLON IDENT '(' func_arg_list_decl ')'
  161             | expr '.' IDENT '(' func_arg_list_decl ')'

  162 func_arg_item: expr
  163              | '{' expr_list '}'

  164 func_arg_list: func_arg_item
  165              | func_arg_list ',' func_arg_item

  166 func_arg_list_decl: ε
  167                   | func_arg_list

  168 assert_expr: rwASSERT '(' expr ')'
  169            | rwASSERT '(' expr ',' STRATOM ')'

  170 expr_list: expr
  171          | expr_list ',' expr

  172 slot_assign_list_opt: ε
  173                     | slot_assign_list

  174 slot_assign_list: slot_assign
  175                 | slot_assign_list slot_assign

  176 slot_assign: IDENT '=' expr ';'
  177            | IDENT '=' '{' expr_list '}' ';'
  178            | TYPEIDENT IDENT '=' expr ';'
  179            | TYPEIDENT IDENT '=' '{' expr_list '}' ';'
  180            | rwDATABLOCK '=' expr ';'
  181            | IDENT '[' aidx_expr ']' '=' expr ';'
  182            | IDENT '[' aidx_expr ']' '=' '{' expr_list '}' ';'
  183            | TYPEIDENT IDENT '[' aidx_expr ']' '=' expr ';'

  184 aidx_expr: expr
  185          | aidx_expr ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '!' <i> (33) 117
    '%' <i> (37) 93
    '&' <i> (38) 94
    '(' <i> (40) 27 28 37 38 39 40 41 42 43 58 59 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 91 134 159 160 161 168 169
    ')' <i> (41) 27 28 37 38 39 40 41 42 43 58 59 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 91 134 159 160 161 168 169
    '*' <i> (42) 98 101
    '+' <i> (43) 96
    ',' <i> (44) 25 32 49 165 169 171 185
    '-' <i> (45) 97 100
    '.' <i> (46) 129 130 161
    '/' <i> (47) 99
    ':' <i> (58) 45 60 61 62 103
    ';' <i> (59) 7 18 19 20 21 22 23 24 25 37 54 55 69 70 71 72 73 74 75 76 176 177 178 179 180 181 182 183
    '<' <i> (60) 104
    '=' <i> (61) 24 25 35 36 150 151 152 153 157 158 176 177 178 179 180 181 182 183
    '>' <i> (62) 105
    '?' (63) 34 36 103
    '@' <i> (64) 116
    '[' (91) 40 41 128 130 152 153 155 181 182 183
    ']' (93) 40 41 128 130 152 153 155 181 182 183
    '^' <i> (94) 92
    '{' <i> (123) 7 22 27 28 37 38 40 42 56 58 59 151 153 158 163 177 179 182
    '|' <i> (124) 95
    '}' <i> (125) 7 22 27 28 37 38 40 42 56 58 59 151 153 158 163 177 179 182
    '~' <i> (126) 118
    error (256)
    rwDEFINE <i> (258) 27 28
    rwENDDEF <i> (259)
    rwDECLARE <i> (260) 38 39 40 41
    rwDECLARESINGLETON <i> (261) 42 43
    rwBREAK <i> (262) 18 122
    rwELSE <i> (263) 66
    rwCONTINUE <i> (264) 19
    rwGLOBAL <i> (265)
    rwIF <i> (266) 65 66
    rwNIL <i> (267)
    rwRETURN <i> (268) 20 21 22
    rwWHILE <i> (269) 67 68
    rwDO <i> (270) 68
    rwENDIF <i> (271)
    rwENDWHILE <i> (272)
    rwENDFOR <i> (273)
    rwDEFAULT <i> (274) 61
    rwFOR <i> (275) 69 70 71 72 73 74 75 76 77 78 79 80 81
    rwFOREACH <i> (276) 82 84 85 86 87 88
    rwFOREACHSTR <i> (277) 83
    rwIN <i> (278) 77 78 79 80 81 82 83 84 85 86 87 88
    rwDATABLOCK <i> (279) 37 180
    rwSWITCH <i> (280) 58
    rwCASE <i> (281) 60 61 62
    rwSWITCHSTR <i> (282) 59
    rwCASEOR <i> (283) 64
    rwPACKAGE <i> (284) 7
    rwASSERT <i> (285) 168 169
    ILLEGAL_TOKEN (286)
    CHRCONST <c> (287)
    INTCONST <i> (288) 121
    TTAG <s> (289) 24 25 102
    VAR <s> (290) 33 34 35 36 77 78 79 80 81 82 83 84 85 86 87 88 127 128 150 151 152 153 154 155
    IDENT <s> (291) 7 27 28 45 125 129 130 133 159 160 161 176 177 178 179 181 182 183
    TYPEIDENT <i> (292) 178 179 183
    DOCBLOCK <str> (293) 26
    STRATOM <str> (294) 126 169
    TAGATOM <str> (295) 119
    FLTCONST <f> (296) 120
    opINTNAME <i> (297) 131
    opINTNAMER <i> (298) 132
    opMINUSMINUS <i> (299) 136
    opPLUSPLUS <i> (300) 135
    opSHL <i> (301) 111
    opSHR <i> (302) 112
    opPLASN <i> (303) 137
    opMIASN <i> (304) 138
    opMLASN <i> (305) 139
    opDVASN <i> (306) 140
    opMODASN <i> (307) 141
    opANDASN <i> (308) 142
    opXORASN <i> (309) 143
    opORASN <i> (310) 144
    opSLASN <i> (311) 145
    opSRASN <i> (312) 146
    opCAT <i> (313)
    opEQ <i> (314) 108
    opNE <i> (315) 109
    opGE <i> (316) 106
    opLE <i> (317) 107
    opAND <i> (318) 113
    opOR <i> (319) 110
    opSTREQ <i> (320) 114
    opSTRNE <i> (321) 115
    opCOLONCOLON <i> (322) 28 160
    opDOTDOT <i> (323) 77 78 79 80 84 85 86 87
    rwRANGE <i> (324) 78 80 81 85 87 88
    rwSTEP <i> (325) 79 80 86 87
    rwStruct <i> (326)
    UNARY (327)


Nonterminals, with rules where they appear

    $accept (98)
        on left: 0
    start (99)
        on left: 1
        on right: 0
    decl_list <stmt> (100)
        on left: 2 3
        on right: 1 3
    decl <stmt> (101)
        on left: 4 5 6
        on right: 3
    package_decl <stmt> (102)
        on left: 7
        on right: 6
    fn_decl_list <stmt> (103)
        on left: 8 9
        on right: 7 9
    statement_list <stmt> (104)
        on left: 10 11
        on right: 11 27 28 56 60 61 62
    stmt <stmt> (105)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 4 11 57
    fn_decl_stmt <stmt> (106)
        on left: 27 28
        on right: 5 8 9
    var_list_decl <var> (107)
        on left: 29 30
        on right: 27 28
    var_list <var> (108)
        on left: 31 32
        on right: 30 32
    param <var> (109)
        on left: 33 34 35 36
        on right: 31 32
    datablock_decl <stmt> (110)
        on left: 37
        on right: 16
    object_decl <od> (111)
        on left: 38 39 40 41 42 43
        on right: 54 55 149
    parent_block <s> (112)
        on left: 44 45
        on right: 37 38 39 40 41 42 43
    object_name <expr> (113)
        on left: 46 47
        on right: 38 39 40 41 42 43
    object_args <expr> (114)
        on left: 48 49
        on right: 38 39 40 41 42 43
    object_declare_block <odcl> (115)
        on left: 50 51 52 53
        on right: 38 40 42
    object_decl_list <od> (116)
        on left: 54 55
        on right: 52 53 55
    stmt_block <stmt> (117)
        on left: 56 57
        on right: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    switch_stmt <stmt> (118)
        on left: 58 59
        on right: 17
    case_block <ifnode> (119)
        on left: 60 61 62
        on right: 58 59 62
    case_expr <expr> (120)
        on left: 63 64
        on right: 60 61 62 64
    if_stmt <stmt> (121)
        on left: 65 66
        on right: 12
    while_stmt <stmt> (122)
        on left: 67 68
        on right: 13
    for_stmt <stmt> (123)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 14
    foreach_stmt <stmt> (124)
        on left: 82 83 84 85 86 87 88
        on right: 15
    expression_stmt <stmt> (125)
        on left: 89
        on right: 23
    expr <expr> (126)
        on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
        on right: 21 24 25 35 36 37 47 58 59 63 64 65 66 67 68 69 70 71 72 73 74 75 77 78 79 80 81 82 83 84 85 86 87 88 91 92 93 94 95 96 97 98 99 100 101 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 129 130 131 132 134 137 138 139 140 141 142 143 144 145 146 150 152 157 161 162 168 169 170 171 176 178 180 181 183 184 185
    slot_acc <slot> (127)
        on left: 129 130
        on right: 123 156 157 158
    intslot_acc <intslot> (128)
        on left: 131 132
        on right: 124
    class_name_expr <expr> (129)
        on left: 133 134
        on right: 37 38 39 40 41 42 43 131 132
    assign_op_struct <asn> (130)
        on left: 135 136 137 138 139 140 141 142 143 144 145 146
        on right: 154 155 156
    stmt_expr <expr> (131)
        on left: 147 148 149 150 151 152 153 154 155 156 157 158
        on right: 89 90
    funcall_expr <expr> (132)
        on left: 159 160 161
        on right: 147
    func_arg_item <expr> (133)
        on left: 162 163
        on right: 164 165
    func_arg_list <expr> (134)
        on left: 164 165
        on right: 165 167
    func_arg_list_decl <expr> (135)
        on left: 166 167
        on right: 159 160 161
    assert_expr <expr> (136)
        on left: 168 169
        on right: 148
    expr_list <expr> (137)
        on left: 170 171
        on right: 22 49 151 153 158 163 171 177 179 182
    slot_assign_list_opt <slist> (138)
        on left: 172 173
        on right: 37
    slot_assign_list <slist> (139)
        on left: 174 175
        on right: 51 53 173 175
    slot_assign <slist> (140)
        on left: 176 177 178 179 180 181 182 183
        on right: 174 175
    aidx_expr <expr> (141)
        on left: 184 185
        on right: 128 130 152 153 155 181 182 183 185


State 0

    0 $accept: • start $end

    $default  reduce using rule 2 (decl_list)

    start      go to state 1
    decl_list  go to state 2


State 1

    0 $accept: start • $end

    $end  shift, and go to state 3


State 2

    1 start: decl_list •
    3 decl_list: decl_list • decl

    rwDEFINE            shift, and go to state 4
    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 7
    rwCONTINUE          shift, and go to state 8
    rwIF                shift, and go to state 9
    rwRETURN            shift, and go to state 10
    rwWHILE             shift, and go to state 11
    rwDO                shift, and go to state 12
    rwFOR               shift, and go to state 13
    rwFOREACH           shift, and go to state 14
    rwFOREACHSTR        shift, and go to state 15
    rwDATABLOCK         shift, and go to state 16
    rwSWITCH            shift, and go to state 17
    rwSWITCHSTR         shift, and go to state 18
    rwPACKAGE           shift, and go to state 19
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 22
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    DOCBLOCK            shift, and go to state 25
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    $default  reduce using rule 1 (start)

    decl             go to state 34
    package_decl     go to state 35
    stmt             go to state 36
    fn_decl_stmt     go to state 37
    datablock_decl   go to state 38
    object_decl      go to state 39
    switch_stmt      go to state 40
    if_stmt          go to state 41
    while_stmt       go to state 42
    for_stmt         go to state 43
    foreach_stmt     go to state 44
    expression_stmt  go to state 45
    expr             go to state 46
    slot_acc         go to state 47
    intslot_acc      go to state 48
    stmt_expr        go to state 49
    funcall_expr     go to state 50
    assert_expr      go to state 51


State 3

    0 $accept: start $end •

    $default  accept


State 4

   27 fn_decl_stmt: rwDEFINE • IDENT '(' var_list_decl ')' '{' statement_list '}'
   28             | rwDEFINE • IDENT opCOLONCOLON IDENT '(' var_list_decl ')' '{' statement_list '}'

    IDENT  shift, and go to state 52


State 5

   38 object_decl: rwDECLARE • class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   39            | rwDECLARE • class_name_expr '(' object_name parent_block object_args ')'
   40            | rwDECLARE • class_name_expr '(' '[' object_name ']' parent_block object_args ')' '{' object_declare_block '}'
   41            | rwDECLARE • class_name_expr '(' '[' object_name ']' parent_block object_args ')'

    IDENT  shift, and go to state 53
    '('    shift, and go to state 54

    class_name_expr  go to state 55


State 6

   42 object_decl: rwDECLARESINGLETON • class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   43            | rwDECLARESINGLETON • class_name_expr '(' object_name parent_block object_args ')'

    IDENT  shift, and go to state 53
    '('    shift, and go to state 54

    class_name_expr  go to state 56


State 7

   18 stmt: rwBREAK • ';'
  122 expr: rwBREAK •

    ';'  shift, and go to state 57

    $default  reduce using rule 122 (expr)


State 8

   19 stmt: rwCONTINUE • ';'

    ';'  shift, and go to state 58


State 9

   65 if_stmt: rwIF • '(' expr ')' stmt_block
   66        | rwIF • '(' expr ')' stmt_block rwELSE stmt_block

    '('  shift, and go to state 59


State 10

   20 stmt: rwRETURN • ';'
   21     | rwRETURN • expr ';'
   22     | rwRETURN • '{' expr_list '}' ';'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    ';'                 shift, and go to state 62
    '{'                 shift, and go to state 63
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 64
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 11

   67 while_stmt: rwWHILE • '(' expr ')' stmt_block

    '('  shift, and go to state 66


State 12

   68 while_stmt: rwDO • stmt_block rwWHILE '(' expr ')'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 7
    rwCONTINUE          shift, and go to state 8
    rwIF                shift, and go to state 9
    rwRETURN            shift, and go to state 10
    rwWHILE             shift, and go to state 11
    rwDO                shift, and go to state 12
    rwFOR               shift, and go to state 13
    rwFOREACH           shift, and go to state 14
    rwFOREACHSTR        shift, and go to state 15
    rwDATABLOCK         shift, and go to state 16
    rwSWITCH            shift, and go to state 17
    rwSWITCHSTR         shift, and go to state 18
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 22
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    DOCBLOCK            shift, and go to state 25
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '{'                 shift, and go to state 67
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    stmt             go to state 68
    datablock_decl   go to state 38
    object_decl      go to state 39
    stmt_block       go to state 69
    switch_stmt      go to state 40
    if_stmt          go to state 41
    while_stmt       go to state 42
    for_stmt         go to state 43
    foreach_stmt     go to state 44
    expression_stmt  go to state 45
    expr             go to state 46
    slot_acc         go to state 47
    intslot_acc      go to state 48
    stmt_expr        go to state 49
    funcall_expr     go to state 50
    assert_expr      go to state 51


State 13

   69 for_stmt: rwFOR • '(' expr ';' expr ';' expr ')' stmt_block
   70         | rwFOR • '(' expr ';' expr ';' ')' stmt_block
   71         | rwFOR • '(' expr ';' ';' expr ')' stmt_block
   72         | rwFOR • '(' expr ';' ';' ')' stmt_block
   73         | rwFOR • '(' ';' expr ';' expr ')' stmt_block
   74         | rwFOR • '(' ';' expr ';' ')' stmt_block
   75         | rwFOR • '(' ';' ';' expr ')' stmt_block
   76         | rwFOR • '(' ';' ';' ')' stmt_block
   77         | rwFOR • '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   78         | rwFOR • '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   79         | rwFOR • '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   80         | rwFOR • '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   81         | rwFOR • '(' VAR rwIN rwRANGE expr ')' stmt_block

    '('  shift, and go to state 70


State 14

   82 foreach_stmt: rwFOREACH • '(' VAR rwIN expr ')' stmt_block
   84             | rwFOREACH • '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   85             | rwFOREACH • '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   86             | rwFOREACH • '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   87             | rwFOREACH • '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   88             | rwFOREACH • '(' VAR rwIN rwRANGE expr ')' stmt_block

    '('  shift, and go to state 71


State 15

   83 foreach_stmt: rwFOREACHSTR • '(' VAR rwIN expr ')' stmt_block

    '('  shift, and go to state 72


State 16

   37 datablock_decl: rwDATABLOCK • class_name_expr '(' expr parent_block ')' '{' slot_assign_list_opt '}' ';'

    IDENT  shift, and go to state 53
    '('    shift, and go to state 54

    class_name_expr  go to state 73


State 17

   58 switch_stmt: rwSWITCH • '(' expr ')' '{' case_block '}'

    '('  shift, and go to state 74


State 18

   59 switch_stmt: rwSWITCHSTR • '(' expr ')' '{' case_block '}'

    '('  shift, and go to state 75


State 19

    7 package_decl: rwPACKAGE • IDENT '{' fn_decl_list '}' ';'

    IDENT  shift, and go to state 76


State 20

  168 assert_expr: rwASSERT • '(' expr ')'
  169            | rwASSERT • '(' expr ',' STRATOM ')'

    '('  shift, and go to state 77


State 21

  121 expr: INTCONST •

    $default  reduce using rule 121 (expr)


State 22

   24 stmt: TTAG • '=' expr ';'
   25     | TTAG • '=' expr ',' expr ';'
  102 expr: TTAG •

    '='  shift, and go to state 78

    $default  reduce using rule 102 (expr)


State 23

  127 expr: VAR •
  128     | VAR • '[' aidx_expr ']'
  150 stmt_expr: VAR • '=' expr
  151          | VAR • '=' '{' expr_list '}'
  152          | VAR • '[' aidx_expr ']' '=' expr
  153          | VAR • '[' aidx_expr ']' '=' '{' expr_list '}'
  154          | VAR • assign_op_struct
  155          | VAR • '[' aidx_expr ']' assign_op_struct

    '='           shift, and go to state 79
    opMINUSMINUS  shift, and go to state 80
    opPLUSPLUS    shift, and go to state 81
    opPLASN       shift, and go to state 82
    opMIASN       shift, and go to state 83
    opMLASN       shift, and go to state 84
    opDVASN       shift, and go to state 85
    opMODASN      shift, and go to state 86
    opANDASN      shift, and go to state 87
    opXORASN      shift, and go to state 88
    opORASN       shift, and go to state 89
    opSLASN       shift, and go to state 90
    opSRASN       shift, and go to state 91
    '['           shift, and go to state 92

    $default  reduce using rule 127 (expr)

    assign_op_struct  go to state 93


State 24

  125 expr: IDENT •
  159 funcall_expr: IDENT • '(' func_arg_list_decl ')'
  160             | IDENT • opCOLONCOLON IDENT '(' func_arg_list_decl ')'

    '('           shift, and go to state 94
    opCOLONCOLON  shift, and go to state 95

    $default  reduce using rule 125 (expr)


State 25

   26 stmt: DOCBLOCK •

    $default  reduce using rule 26 (stmt)


State 26

  126 expr: STRATOM •

    $default  reduce using rule 126 (expr)


State 27

  119 expr: TAGATOM •

    $default  reduce using rule 119 (expr)


State 28

  120 expr: FLTCONST •

    $default  reduce using rule 120 (expr)


State 29

  100 expr: '-' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 96
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 30

  101 expr: '*' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 97
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 31

   91 expr: '(' • expr ')'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 98
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 32

  118 expr: '~' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 99
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 33

  117 expr: '!' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33
